--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pat Needham <patrick.h.needham@gmail.com> (https://patneedham.me/)",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3"
   }
 }
