--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Pat Needham <patrick.h.needham@gmail.com> (https://patneedham.me/)",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "joi": "^17.6.0"
   }
 }
